[workspace]

members = [
    "common",
    "daemon",
    "examples",
    "kex",
    "message",
    "vault",
    "router",
    "system",
    "queue_topic",
    "transport",
    "node",
#    "worker",
    "xeddsa",
    "c/generate_bindings",
    "c/bindings",
    "c/rust_memory",
]

exclude = [
    "okta"
]

default-members = [
    "common",
    "daemon",
    "examples",
    "kex",
    "message",
    "vault",
    "router",
    "system",
    "queue_topic",
    "transport",
    "node",
#    "worker",
    "xeddsa",
    "c/bindings",
    "c/rust_memory",
]
